# mini-vk

./: .clang-format  CMakeLists.txt  README.md  basic.frag  basic.vert  main.cpp
CMakeGLSL/: CMakeDetermineGLSLCompiler.cmake  CMakeGLSLCompiler.cmake.in  CMakeGLSLInformation.cmake  CMakeTestGLSLCompiler.cmake
src/: basic.vert  main.cpp
